--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Project"
         tools:targetApi="31">
         <activity
+            android:name=".finish1"
+            android:exported="false" />
+        <activity
             android:name=".project_main"
             android:exported="false" />
         <activity
